// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test watermark font 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <foreignObject x="0" y="0" width="100" height="100" class="var-watermark__content">
          <div xmlns="http://www.w3.org/1999/xhtml" style="position: absolute; top: 0px; left: 0px; transform: rotate(-22deg); transform-origin: center;"><span class="var-watermark__content-color" style="font-size: 15px; font-weight: 700;">Varlet</span></div>
        </foreignObject>
        <!--v-if-->
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark height 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 150" width="100" height="150" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <!--v-if-->
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark height 2`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(undefined); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 200" width="100" height="200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <!--v-if-->
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark image 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <image href="" xlink:href="" x="0" y="0" width="100" height="100" style="transform-origin: center; transform: rotate(-22deg);"></image>
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark image offsetX 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <image href="" xlink:href="" x="20" y="0" width="100" height="100" style="transform-origin: center; transform: rotate(-22deg);"></image>
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark image offsetX 2`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(undefined); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <image href="" xlink:href="" x="30" y="0" width="100" height="100" style="transform-origin: center; transform: rotate(-22deg);"></image>
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark image offsetY 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <image href="" xlink:href="" x="0" y="20" width="100" height="100" style="transform-origin: center; transform: rotate(-22deg);"></image>
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark image offsetY 2`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(undefined); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <image href="" xlink:href="" x="0" y="30" width="100" height="100" style="transform-origin: center; transform: rotate(-22deg);"></image>
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark width 1`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 150 100" width="150" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <!--v-if-->
      </svg></div>
  </div>
</div>"
`;

exports[`test watermark width 2`] = `
"<div class="var-watermark">
  <div class="var-watermark__container" style="background-image: url(undefined); z-index: 10;">
    <div style="display: none;"><svg viewBox="0 0 200 100" width="200" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="padding: 0px 0px 0px 0px; opacity: 0.5;">
        <!--v-if-->
        <!--v-if-->
      </svg></div>
  </div>
</div>"
`;
